mSystems: docs of the initial submission
On branch master
	new file:   CoverLetter.DOC
	new file:   CoverLetter.pdf
	deleted:    MSWord_OBSOLETE/WHOLE_draft_0.1.docx
	deleted:    MSWord_OBSOLETE/discussion_draft_0.1.docx
	deleted:    MSWord_OBSOLETE/intro_draft_0.1.docx
	deleted:    MSWord_OBSOLETE/intro_draft_0.2.docx
	deleted:    MSWord_OBSOLETE/mat_met_draft_0.3.docx
	deleted:    MSWord_OBSOLETE/results_draft_0.1.docx
	deleted:    MSWord_OBSOLETE/skeleton_draft_0.3.docx
	new file:   mSys_MAIN.docx
	modified:   mSys_MAIN.pdf
	modified:   mSys_MAIN.tex
	modified:   mSys_suppl.pdf
	modified:   mSys_suppl.tex

--- a/mSystems/mSys_MAIN.tex
+++ b/mSystems/mSys_MAIN.tex
@@ -4,7 +4,7 @@
 \documentclass[12pt,oneside,letterpaper]{article}
 
 % release codenumber (update it here!)
-\newcommand\releasecode{$\beta$}
+\newcommand\releasecode{initial}
 
 %%% PACKAGES
 \usepackage{lmodern} % Activa fuentes y macros de Latin Modern
@@ -27,9 +27,9 @@
 \geometry{textheight=22.5cm} % 22cm for single-space, 22.5cm for double-space
 
 % watermarks (time consuming!)
-\newwatermark[allpages,color=Green!4,angle=45,scale=12,xpos=-60,ypos=0]{RC\releasecode}
-\newwatermark[allpages,color=Green!12,angle=0,scale=1,xpos=0,ypos=137]{
-\emph{mSystems} \LaTeX\ manuscript RC\releasecode}
+\newwatermark[allpages,color=Purple!4,angle=45,scale=7,xpos=-40,ypos=0]{submitted}
+\newwatermark[allpages,color=Purple!12,angle=0,scale=1,xpos=0,ypos=137]{
+\emph{mSystems} \LaTeX\ manuscript \releasecode\ submission}
 
 % helps to keep figures from being orphaned on a page by themselves
 \renewcommand{\topfraction}{0.85}
