--- a/mSystems/mSys_suppl.tex
+++ b/mSystems/mSys_suppl.tex
@@ -4,7 +4,7 @@
 \documentclass[12pt,oneside,letterpaper]{article}
 
 % release codenumber (update it here!)
-\newcommand\releasecode{$\beta$}
+\newcommand\releasecode{initial}
 
 %%% PACKAGES
 \usepackage{lmodern} % Activa fuentes y macros de Latin Modern
@@ -27,9 +27,9 @@
 \geometry{textheight=22.5cm} % 22cm for single-space, 22.5cm for double-space
 
 % watermarks (time consuming!)
-\newwatermark[allpages,color=Green!4,angle=45,scale=12,xpos=-60,ypos=0]{RC\releasecode}
-\newwatermark[allpages,color=Green!12,angle=0,scale=1,xpos=0,ypos=137]{
-\emph{mSystems} \LaTeX\ manuscript RC\releasecode}
+\newwatermark[allpages,color=Purple!4,angle=45,scale=7,xpos=-40,ypos=0]{submitted}
+\newwatermark[allpages,color=Purple!12,angle=0,scale=1,xpos=0,ypos=137]{
+\emph{mSystems} \LaTeX\ manuscript \releasecode\ submission}
 
 % helps to keep figures from being orphaned on a page by themselves
 \renewcommand{\topfraction}{0.85}
