--- a/mSystems/mSys_MAIN.tex
+++ b/mSystems/mSys_MAIN.tex
@@ -18,7 +18,7 @@
 \usepackage[usenames,dvipsnames,table]{xcolor}
 \usepackage{parskip}
 %%\usepackage{float}
-\usepackage[nolists,tablesfirst, nomarkers]{endfloat}
+\usepackage[nolists, nomarkers]{endfloat}
 \usepackage{moreverb} % for verbatim output
 
 % text layout
@@ -27,9 +27,9 @@
 \geometry{textheight=22.5cm} % 22cm for single-space, 22.5cm for double-space
 
 % watermarks (time consuming!)
-\newwatermark[allpages,color=Purple!4,angle=45,scale=7,xpos=-40,ypos=0]{submitted}
-\newwatermark[allpages,color=Purple!12,angle=0,scale=1,xpos=0,ypos=137]{
-\emph{mSystems} \LaTeX\ manuscript \releasecode\ submission}
+%\newwatermark[allpages,color=Purple!4,angle=45,scale=7,xpos=-40,ypos=0]{submitted}
+%\newwatermark[allpages,color=Purple!12,angle=0,scale=1,xpos=0,ypos=137]{
+%\emph{mSystems} \LaTeX\ manuscript \releasecode\ submission}
 
 % helps to keep figures from being orphaned on a page by themselves
 \renewcommand{\topfraction}{0.85}
@@ -45,6 +45,7 @@
 % bold the 'Figure #' in the caption and separate it with a period
 % Captions will be left justified
 \usepackage[labelfont=bf,labelsep=period,font=small]{caption}
+\captionsetup[table]{name=Supplementary Table S\!\!} % See EOF
 
 % review layout with double-spacing
 \usepackage{setspace} 
@@ -270,6 +271,23 @@ Reduced diversity and altered composition of the gut microbiome in individuals w
 \bibitem{boot} {\bf Wu, C.F.J.} 1986. Jackknife, bootstrap and other resampling methods in regression analysis. (with discussions) \textit{The Annals of Statistics} {\bf 14}:1261-1350 
 \bibitem{biopwrlaw} {\bf Xiao X, White EP, Hooten MB, Durham SL}. 2011. On the use of log-transformation vs. nonlinear regression for analyzing biological power laws. Ecology {\bf 92}:1887-1894
 \end{thebibliography}
+
+%% mSystems staff asked to send the captions of the supplementary tables at the end
+%%  of the main text PDF.
+\begin{table}
+  \caption{Taylor parameters. Individuals with either animal-based (A) or plant-based (P) diets\cite{diet}. Previous to diet,  the population sampled is described by $\bar{V} = 0.09 \pm 0.05, \bar{\beta} = 0.77 \pm 0.04$.}
+
+\caption{Taylor parameters for individuals taking antibiotics\cite{antibiotic}. Prior to antibiotics intake, the population sampled is described by $\bar{V} = 0.12 \pm 0.05, \bar{\beta} = 0.75 \pm 0.04$.}
+
+\caption{Taylor parameters for persons diagnosed with irritable bowel syndrome (IBS)\cite{IBS}. Healthy individuals sampled in this study are characterized by $\bar{V} = 0.134 \pm 0.009, \bar{\beta} = 0.691 \pm 0.025$.}
+
+\caption{Taylor parameters for the healthy subject of the discordant twins\cite{kwashiorkor}. This table continues in Supplementary Table S\ref{tab:DK}. The population of healthy twins is characterized by $\bar{V} = 0.25 \pm 0.10, \bar{\beta} = 0.863 \pm 0.028$.}\label{tab:DH}
+
+\caption{Taylor parameters for the kwashiorkor part of the discordant twins\cite{kwashiorkor}. This is a continuation of Supplementary Table S\ref{tab:DH}. The population of healthy twins is characterized by $\bar{V} = 0.25 \pm 0.10, \bar{\beta} = 0.863 \pm 0.028$.}\label{tab:DK}
+
+\caption{Taylor parameters for individuals with different degrees of overweight and obesity\cite{LEA}. Healthy people in this study, whom were not obese, are characterized by $\bar{V} = 0.19 \pm 0.06, \bar{\beta} = 0.806 \pm 0.034$.} 
+\end{table}
+
 \end{document}
 
 
